--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.2.6",
     "core-js": "^3.8.3",
     "three": "^0.169.0",
     "vue": "^3.2.13"
