--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/motion": "^2.2.6",
+    "aos": "^3.0.0-beta.6",
     "core-js": "^3.8.3",
     "three": "^0.169.0",
     "vue": "^3.2.13"
